--- a/index.html
+++ b/index.html
@@ -1,15 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="auto">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>100 Days of Code</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>This is test homepage!</h1>
-    <a href="./role-paying-game/index.html">Go to Role Play game</a>
+
+    <body class="d-flex flex-column min-vh-100">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom" aria-label="Eighth navbar example">
+            <div class="container">
+                <a class="navbar-brand" href="#">100DaysOfCode</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#skimmitNav"
+                    aria-controls="skimmitNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse " id="skimmitNav">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <main class="flex-shrink-0 py-5">
+            <div class="container">
+                <!-- TODO: add short random quotes as header -->
+                <ul>
+                    <li><a href="./role-paying-game/index.html">Role Play game</a>
+                    </li>
+                </ul>
+            </div>
+        </main>
+
+        <footer class="footer mt-auto py-3 bg-light">
+            <div class="container text-center small mt-2">
+                <span class="text-body-secondary">© Copyleft 2024.</span>
+                <!-- <div class="d-flex justify-content-center align-items-center fs-6 mt-3">
+                    <a href="https://github.com/balewgize" class="mx-3 text-body-secondary" target="_blank">
+                        <i class="fa-brands fa-github"></i></a>
+                    <a href="https://twitter.com/balewgizem" class="mx-3 text-body-secondary" target="_blank">
+                        <i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/balewgize/" class="mx-3 text-body-secondary" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i></a>
+                </div> -->
+            </div>
+        </footer>
+
+        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script> -->
+    </body>
 </body>
 
 </html>
