--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body class="d-flex flex-column min-vh-100">
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom" aria-label="Eighth navbar example">
             <div class="container">
-                <a class="navbar-brand" href="#">100DaysOfCode</a>
+                <a class="navbar-brand" href="https://balewgize.github.io/100DaysOfCode/">100DaysOfCode</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#skimmitNav"
                     aria-controls="skimmitNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -33,30 +33,40 @@
         <main class="flex-shrink-0 py-5">
             <div class="container">
                 <!-- TODO: add short random quotes as header -->
-                <ul>
-                    <li><a href="./role-paying-game/index.html">Role Play game</a>
-                    </li>
-                </ul>
+                <div class="row">
+                    <div class="col-lg-5 mx-auto mb-5">
+                        <div class="card">
+                            <a href="./role-paying-game/index.html">
+                                <img src="./images/role-playing-game.png" class="card-img-top"></a>
+                            <div class="card-body">
+                                <h5 class="card-title">Learn Basic JavaScript by Building a Role Playing Game</h5>
+                                <p class="card-text">Work with variables, arrays, strings, objects, functions, loops,
+                                    and conditional statements.</p>
+                                <a href="./role-paying-game/index.html" class="btn btn-outline-primary">View demo</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 mx-auto mb-5">
+                        <div class="card">
+                            <a href="./role-paying-game/index.html">
+                                <img src="./images/role-playing-game.png" class="card-img-top"></a>
+                            <div class="card-body">
+                                <h5 class="card-title">Learn Basic JavaScript by Building a Role Playing Game</h5>
+                                <p class="card-text">Work with variables, arrays, strings, objects, functions, loops,
+                                    and conditional statements.</p>
+                                <a href="./role-paying-game/index.html" class="btn btn-outline-primary">View demo</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
 
         <footer class="footer mt-auto py-3 bg-light">
             <div class="container text-center small mt-2">
                 <span class="text-body-secondary">© Copyleft 2024.</span>
-                <!-- <div class="d-flex justify-content-center align-items-center fs-6 mt-3">
-                    <a href="https://github.com/balewgize" class="mx-3 text-body-secondary" target="_blank">
-                        <i class="fa-brands fa-github"></i></a>
-                    <a href="https://twitter.com/balewgizem" class="mx-3 text-body-secondary" target="_blank">
-                        <i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://www.linkedin.com/in/balewgize/" class="mx-3 text-body-secondary" target="_blank">
-                        <i class="fa-brands fa-linkedin"></i></a>
-                </div> -->
             </div>
         </footer>
-
-        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script> -->
     </body>
 </body>
 
