--- a/index.html
+++ b/index.html
@@ -34,28 +34,41 @@
             <div class="container">
                 <!-- TODO: add short random quotes as header -->
                 <div class="row">
-                    <div class="col-lg-5 mx-auto mb-5">
+                    <div class="col-lg-5 mx-2 mb-5">
                         <div class="card">
                             <a href="./01-role-paying-game/index.html">
                                 <img src="./images/role-playing-game.png" class="card-img-top"></a>
                             <div class="card-body">
-                                <h5 class="card-title">Learn Basic JavaScript by Building a Role Playing Game</h5>
+                                <h5 class="card-title">Role Playing Game</h5>
                                 <p class="card-text">Work with variables, arrays, strings, objects, functions, loops,
                                     and conditional statements.</p>
                                 <a href="./01-role-paying-game/index.html" class="btn btn-outline-primary">View demo</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-5 mx-auto mb-5">
+                    <div class="col-lg-5 mx-2 mb-5">
                         <div class="card">
                             <a href="./02-calorie-counter/index.html">
                                 <img src="./images/calorie-counter.png" class="card-img-top"></a>
                             <div class="card-body">
-                                <h5 class="card-title">Learn Form Validation by Building a Calorie Counter</h5>
+                                <h5 class="card-title">Calorie Counter</h5>
                                 <p class="card-text">Validate user inputs, regex, event listener, template literals,
                                     dynamically udpate DOM.
                                 </p>
                                 <a href="./02-calorie-counter/index.html" class="btn btn-outline-primary">View demo</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 mx-2 mb-5">
+                        <div class="card">
+                            <a href="./03-music-player/index.html">
+                                <img src="./images/music-player.png" class="card-img-top"></a>
+                            <div class="card-body">
+                                <h5 class="card-title">Music Player
+                                </h5>
+                                <p class="card-text">Arrow functions, array methods, optional chaining, spread operator,
+                                    audio API.</p>
+                                <a href="./03-music-player/index.html" class="btn btn-outline-primary">View demo</a>
                             </div>
                         </div>
                     </div>
