Update home page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="auto">
+<html lang="en" data-bs-theme="white">
 
 <head>
     <meta charset="utf-8">
@@ -32,45 +32,85 @@
 
         <main class="flex-shrink-0 py-5">
             <div class="container">
-                <!-- TODO: add short random quotes as header -->
                 <div class="row">
-                    <div class="col-lg-5 mx-2 mb-5">
-                        <div class="card">
-                            <a href="./01-role-paying-game/index.html">
-                                <img src="./images/role-playing-game.png" class="card-img-top"></a>
-                            <div class="card-body">
-                                <h5 class="card-title">Role Playing Game</h5>
-                                <p class="card-text">Work with variables, arrays, strings, objects, functions, loops,
-                                    and conditional statements.</p>
-                                <a href="./01-role-paying-game/index.html" class="btn btn-outline-primary">View demo</a>
-                            </div>
-                        </div>
+                    <div class="text-center">
+                        <h1 class="fw-light">100 Days of Code</h1>
+                        <p class="lead text-muted">#100DaysOfCode Challenge to learn JavaScript and its Frameworks.</p>
                     </div>
-                    <div class="col-lg-5 mx-2 mb-5">
-                        <div class="card">
-                            <a href="./02-calorie-counter/index.html">
-                                <img src="./images/calorie-counter.png" class="card-img-top"></a>
-                            <div class="card-body">
-                                <h5 class="card-title">Calorie Counter</h5>
-                                <p class="card-text">Validate user inputs, regex, event listener, template literals,
-                                    dynamically udpate DOM.
+                    <div class="col-lg-8 mx-auto pt-5">
+                        <ol>
+                            <li>
+                                <h5><a href="./01-role-paying-game/index.html" target="_blank">Learn Basic JavaScript by
+                                        Building a Role Playing Game</a></h5>
+                                <p>Work with variables, arrays, strings, objects, functions, loops, and conditional
+                                    statements. </p>
+                            </li>
+                            <li>
+                                <h5><a href="./02-calorie-counter/index.html" target="_blank">Learn Form Validation by
+                                        Building a Calorie Counter</a></h5>
+                                <p>Validate user inputs, regex, event listener, template literals.
                                 </p>
-                                <a href="./02-calorie-counter/index.html" class="btn btn-outline-primary">View demo</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-5 mx-2 mb-5">
-                        <div class="card">
-                            <a href="./03-music-player/index.html">
-                                <img src="./images/music-player.png" class="card-img-top"></a>
-                            <div class="card-body">
-                                <h5 class="card-title">Music Player
+                            </li>
+                            <li>
+                                <h5> <a href="./02-calorie-counter/index.html" target="_blank"> Learn Form Validation by
+                                        Building a Calorie
+                                        Counter</a> </h5>
+                                <p>Validate user inputs, regex, event listener, template literals.</p>
+                            </li>
+                            <li>
+                                <h5> <a href="./03-music-player/index.html" target="_blank"> Learn Basic String and
+                                        Array Methods by Building a
+                                        Music Player</a> </h5>
+                                <p>Arrow functions, array methods, optional chaining, spread operator, audio API.</p>
+                            </li>
+                            <li>
+                                <h5> <a href="./06-football-team-cards/index.html" target="_blank"> Learn Modern
+                                        JavaScript Methods by Building Football
+                                        Team Cards</a> </h5>
+                                <p>Object destructuring, event handling, data filtering.</p>
+                            </li>
+                            <li>
+                                <h5> <a href="./07-todo-app/index.html" target="_blank"> Learn localStorage by Building
+                                        a Todo App</a> </h5>
+                                <p>Handle form inputs, manage local storage, perform CRUD operations on tasks, event
+                                    listeners.</p>
+                            </li>
+                            <li>
+                                <h5><a href="./09-geez-numeral-converter/index.html" target="_blank">Geez Numeral
+                                        Converter</a></h5>
+                                <p>Handle form inputs, convert Gregorian numerals to Ethiopian Geez Numerals.</p>
+                            </li>
+                            <li>
+                                <h5> <a href="./10-spam-filter/index.html" target="_blank"> Learn Regular Expressions by
+                                        Building a Spam
+                                        Filter</a> </h5>
+                                <p>Capture groups, positive lookaheads, negative lookaheads, and other techniques.</p>
+                            </li>
+                            <li>
+                                <h5> <a href="./12-shopping-cart/index.html" target="_blank"> Learn Basic OOP by
+                                        Building a Shopping Cart</a>
                                 </h5>
-                                <p class="card-text">Arrow functions, array methods, optional chaining, spread operator,
-                                    audio API.</p>
-                                <a href="./03-music-player/index.html" class="btn btn-outline-primary">View demo</a>
-                            </div>
-                        </div>
+                                <p>Define classes, create class instances, adding methods for data manipulation, `this`
+                                    keyword.</p>
+                            </li>
+                            <li>
+                                <h5> <a href="./14-fetch-fcc-authors/index.html" target="_blank"> Learn Fetch and
+                                        Promises by Building an fCC Authors
+                                        Page</a> </h5>
+                                <p>`fetch` method to get data from external API, display fetched data, pagination.</p>
+                            </li>
+                            <li>
+                                <h5> <a href="./15-async-fcc-leaderboard/index.html" target="_blank">Learn Asynchronous
+                                        Programming by Building an fCC
+                                        Forum Leaderboard</a> </h5>
+                                <p>Asynchronous concepts: Fetch API, promises, `async/await`, and `try..catch`
+                                    statement.</p>
+                            </li>
+                            <li>
+                                <h5><a href="./16-pokeman-search/index.html" target="_blank">Pokémon Search App</a></h5>
+                                <p>Fetch data from API, search, and display data. </p>
+                            </li>
+                        </ol>
                     </div>
                 </div>
             </div>
